--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 	  border-left: solid #a3a5c8 2px;
     border-top: solid #a3a5c8 2px;
     width: 37%;
-    height: 18rem;
+    height: max-content;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
@@ -55,7 +55,7 @@ body {
     margin: 10px;
   }
   .foto {
-    width: 205px;
+    width: 225px;
     height: 225px;
   }
   #profile img {
@@ -106,6 +106,9 @@ body {
     background-color: #b6cceb;
     border-radius: 10px;
   }
+  #projects{
+    height: max-content;
+  }
   .name {
     display: flex;
     flex-direction: column;
@@ -129,7 +132,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     border-top: solid 2px #a3a5c8;
     border-bottom: solid 2px #a3a5c8;
   }
@@ -171,7 +174,7 @@ body {
 
  @media screen and (max-width: 1010px) {
    .block {
-    width: 100%;
+    width: 95%;
    }
    .header {
      width: 100%;
@@ -183,6 +186,7 @@ body {
     }
     #profile {
       width: 100%;
+      height: max-content;
     }
  }
  @media screen and (max-width: 700px) {
